# brne

./: README.md
brne_nav/: README.md
brne_nav/brne_py/: README.md
brne_nav/brne_py/brne_py/: brne_nav.py
brne_nav/brne_torch/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
brne_nav/brne_torch/brne_torch/: brne_nav_torch.py  brne_torch.py
brne_nav/brne_torch/launch/: bringup.launch.py
brne_nav/crowd_nav/: CMakeLists.txt  package.xml
brne_nav/crowd_nav/config/: brne.yaml  crowdnav.rviz  crowdnav_distr.rviz
brne_nav/crowd_nav/launch/: algorithm.launch.xml
brne_nav/pedestrian_tracking/config/: zed_config.yaml
brne_nav/pedestrian_tracking/launch/: orin.launch.xml
socnavbench/: README.md  brne.py  joystick_brne.py  joystick_client.py  joystick_cvm.py
tutorials/: README.md  brne_2agent_example.ipynb  brne_2d_example.ipynb  brne_3agent_example.ipynb
