<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brne_torch</name>
  <version>0.0.0</version>
  <description>A PyTorch implementation of the BRNE algorithm for crowd navigation</description>
  <maintainer email="muchen@u.northwestern.edu">Muchen Sun, Maia Traub</maintainer>
  <license>Proprietary</license>
  <depend>easy_markers</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>crowd_nav_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
